# ScreenSubtitleReader

./: README.md  pyproject.toml
src/ScreenReader/core/: __main__.py  ocr_fither.py  screen_reader.py  speaker.py  string_fither.py
src/ScreenReader/ocr_module/: model.py
