[project]
name = "ScreenSubtitleReader"
version = "0.1.3"
description = "自动识别屏幕上正在放映视频的字幕并读出来"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "onnxruntime>=1.26.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "platformdirs>=4.10.0",
    "pyclipper>=1.4.0",
    "python-levenshtein>=0.27.3",
    "pyttsx3==2.91",
    "shapely>=2.1.2",
    "tornado>=6.5.5",
]
[project.scripts]
scsrt = "ScreenSubtitleReader.__main__:main"

[tool.uv]
package = true

[tool.setuptools.package-data]
"*" = ["*.onnx"]
